--- a/paper/incl_intro.tex
+++ b/paper/incl_intro.tex
@@ -16,8 +16,18 @@
 \newcommand{\stiffmat}{\mathbf{H}}
 \newcommand{\stiffmatcompl}{\widetilde{\mathbf{H}}}
 
+% 
+% 
 
-
+\newcommand{\Youngfilm}{\mathsf{E_{\text{2d}}}}
+\newcommand{\Youngsubs}{{\mathsf{\widetilde E_{\text{2d}}}}}
+% \newcommand{\Youngfilm}{{ E}}
+\newcommand{\Estiffhom}{\Estiff^\text{hom}}
+\newcommand{\Estiffcompl}{\Ecompl^\text{hom}}
+\newcommand{\femstate}{\mathbf{X}}
+\newcommand{\femnewstate}{\femstate'}
+\newcommand{\femcurrentstate}{\mathbf{X^*}}
+\newcommand{\femperturb}{\mathbf{p}}
 \begin{table}[h!]
     \centering
     \begin{tabular}{  m{3.5cm}  m{3cm}  m{2.5cm}  m{6cm}  }
@@ -37,61 +47,86 @@
       & $(\lambda, w^*)$ &  & \\
       & $(\kappa, z^*)$ &  & \\
       & $\bar \epsilon^c$ &  & first critical load, stiff\\
-      & $\epsilon_c^*$ &  & first critical load, compliant \\
+      & $\bar \epsilon_c^1$ &  & first critical load, compliant \\
+      & $\bar \epsilon^c_*$ &  & all critical loads \\
+      & $\bar \epsilon^c_n$ &  & $n$-th critical load  \\
       & ${\bf R}^1, {\bf R}^2$ & ${\bf R}1, \widetilde{\bf R}$ & \\
       & $\damagell$ & $.$ & \\
       & $\bar \epsilon_1$ & $.$ & \\
-      & $\mathbf{X}^{(k)}$ & $.$ & \\
-      & $\mathbf{X}^{(k)}$ & $.$ & \\
+    Equilibrium state stiff& $y_t=(u_t, \alpha_t)$ & $.$ & \\
+    Equilibrium state compliant & $y_t=(u_t, \alpha_t, v_t)$ & $.$ & \\
+    FEM base functions and derivative  & ${\mathcal N}_i, {\mathcal N}'_i$ & $.$ & \\
+     Young subs & $\Youngsubs$ & $.$ & \\
+     Young film & $\Youngfilm$ & $.$ & \\
+    Homogeneous state  & $\yhom$ & $.$ & \\
+    Homogeneous energy, stiff   & $\Estiffhom$ & $.$ & \\
+    Homogeneous energy, stiff   & $\Estiffcompl$ & $.$ & \\
+     Load & $\bar\epsilon_t$ & $.$ & \\
+     Eigenvalues & $\lambda_t$ & $.$ & \\
+     Eigenvect & $hp_n = y - y_t $ & $.$ & \\
+     FEM state & $\femstate$ & $.$ & \\
+     FEM new state & $\femnewstate$ & $.$ & \\
+     FEM current equilibrium state & $\femcurrentstate$ & $.$ & \\
+     FEM perturbation & $\femperturb$ & $.$ & \\
     \end{tabular}
     \caption{Notation and Definitions}
 \label{table:notation}
 \end{table}
 
 \section{Introduction}
-Numerous physical phenomena in materials science, such as crystal plasticity, phase transitions, twinning~\cite{Clayton2011-xq}, and fracture ~\cite{Baldelli2014-ho,Baldelli2021-gc}, can be described by non-linear energy functionals at the mesoscale. \comment[id=ALB]{Unclear}{When these systems evolve,}, equilibrium configurations are critical states the energy functional that satisfy boundary conditions and an optimality criterion. This optimization process is achieved through incremental minimization along a loading program. Outcomes of such optimization are elastic fields
-(e.g., displacement, strain, stress, and strain energy density) and the order parameters, depending on the model considered. The corresponding microstructures are crucial to understand and improve the mechanical behavior of materials.
+Numerous physical phenomena in materials science, such as crystal plasticity, phase transitions, twinning~\cite{Clayton2011-xq}, and fracture ~\cite{Baldelli2014-ho,Baldelli2021-gc}, can be described by non-linear energy functionals at the mesoscale. 
+% {When these systems evolve,}, equilibrium configurations are critical states the energy functional that satisfy boundary conditions and an optimality criterion. 
+The configurational variables within these energy functionals evolve under external loading, NAVIGATING equilibrium states. These states corresponds to critical points of the energy functional, satisfying both boundary conditions and an optimality criterion.
+This optimization process is achieved through incremental minimization along a loading program. Outcomes of such optimization are fields
+(e.g., displacement, strain, stress), energy components, and order parameters depending on the model considered. The corresponding microstructures are crucial to understand and improve the mechanical behavior of materials.
 
-To describe  various phenomena in the realm of material science, possibly governed by intricate mathematical formulations, one encounters two distinct types of functionals. The first one involves functionals of type $\Psi(\mathbf u)$ non-convex in its argument, the displacement field $\mathbf u$. These functionals are frequently employed in theories such as quasi-continuum methods, the multi-well Landau-type theory of reconstructive phase transformations, twinning, and crystal plasticity~\cite{Tadmor1996-qi,Conti2004-yj,Clayton2011-xq,Baggio2019-rs,Baggio2023-qu}. On the other hand, a second type of functionals, denoted as $\Psi(\mathbf u, \alpha)$, find application in phase-field theories. Here, the scalar phase-field variable $\alpha$ IS AN INTERNAL VARIABLE THAT elucidates the substance's state, encompassing aspects like crystal structure, symmetry, lattice orientation, \cite{Finel2010-zw,Ruffini2015-pn,Javanbakht2016-dr} or serving as a damage parameter in variational phase-field theory of fracture~\cite{francfort_marigo1998,Salman2021-mn}. 
+Functionals of the type $\Psi(\mathbf u)$, non-convex in their argument  $\mathbf u$ (the displacement field) are frequently employed in theories such as quasi-continuum methods, the multi-well Landau-type theory of reconstructive phase transformations, twinning, and crystal plasticity~\cite{Tadmor1996-qi,Conti2004-yj,Clayton2011-xq,Baggio2019-rs,Baggio2023-qu}. On the other hand, a second type of functionals, denoted as $\Psi(\mathbf u, \alpha)$, find application in phase-field theories. Here, the scalar phase-field variable $\alpha$ is an internal variable that elucidates the substance's state, encompassing aspects like crystal structure, symmetry, lattice orientation, \cite{Finel2010-zw,Ruffini2015-pn,Javanbakht2016-dr} or serving as a damage parameter in the variational phase-field theory of fracture~\cite{francfort_marigo1998,Salman2021-mn}. 
 
-In both cases, one deals\comment[id=ALB]{the problem is to find stable configurations that achieve min} with the problem of finding  stable configurations that  can be expressed as $\min_{\boldsymbol{u}} \Psi(\boldsymbol{u})$ or $\min_{\boldsymbol{u},\alpha} \Psi(\boldsymbol{u},\alpha)$.  Under a quasi-static loading protocol, the system navigates metastable states\comment[id=ALB]{statement is unclear, is this a hypothesis?}, representing local minima of the energy. 
-It is known that continuous branches of equilibria can bifurcate and intersect as well as terminate at points where the state's stability is lost. 
+In both cases, one deals with the problem of finding  configurations that satisfy $\min_{\boldsymbol{u}} \Psi(\boldsymbol{u})$, $\min_{\boldsymbol{u},\alpha} \Psi(\boldsymbol{u},\alpha)$, or at least some \emph{necessary conditions} for energy optimality, possibly satisfying constraints. 
+The multiple minima of the functionals and the multitude of equilibrium states accessible during loading, create many possible evolution paths. One can expect that under a quasi-static loading protocol, the system navigates among metastable states which are continuous branches of equilibria. These branches can bifurcate and intersect as well as terminate at points where the state’s stability is lost.
 % \added[id=ALB]{Thus, whether smooth or sudden, transitions lead the system to a new equilibrium state.}
-At an instability \added[id=ALB]{threshold}, the system restabilizes in a dissipative manner \added[id=ALB]{through a state transition, whether smoothly or suddenly}.
-In this quasi-static setting, the task is to choose a new locally stable equilibrium branch with lower energy. 
-During an isolated switching event, new equilibrium branches can be determined using a steepest descent algorithm\comment[id=ALB]{statement is unclear, is this a hypothesis?}. However, because the energy functionals in our focus are strongly nonlinear, they may lack convexity in their arguments and thus exhibit multiple local minima or none at all. Consequently, conducting stability and bifurcation analyses becomes crucial to distinguish among the various potential solutions or evolution paths, those that are physically relevant.
-\added[id=ALB]{
-The study of bifurcation and stability of equilibrium configurations in dynamic systems without constraints has led to a systematic investigation of the possible local behaviors at bifurcations points in terms of linearised (canonical) representations, allowing for easier classification and analysis of the bifurcation types~\cite{}. 
-For systems of ODEs the criterion  of bifurcation (from a fundamental solution) amounts to the study of the existence of solutions different than the fundamental one in an arbitrary neighborhood of the control parameters. Conditions of failure of the implicit function theorem~\cite{} describe the scenario under which a system of equations can realise more than one smooth solution.
-Less clear is the picture in presence of nonconvexities and nonlinear constraints associated with internal variables, where quasi-static evolutionary problems defined by optimality conditions take the form of variational inequalities which model the trajectory of a system in phase space. In these scenarios, as noted in the seminal work~\cite{hill}, the study of bifurcation and stability is not equivalent to the existence of solutions infinitesimally near critical points in an arbitrary neighborhoods of the control parameters.
-bazant, ....}
+At an instability threshold, the system restabilizes in a dissipative manner through a state transition, whether smoothly or suddenly.
+In this quasi-static setting, how does the system choose a new locally stable equilibrium branch with lower energy?
+During an isolated switching event, new equilibrium branches can be determined using a steepest descent algorithm. However, because the energy functionals in our focus are strongly nonlinear, they may lack convexity in their arguments and thus exhibit multiple local minima or none at all. Consequently, conducting stability and bifurcation analyses becomes crucial to distinguish among the various potential solutions or evolution paths, those that are physically relevant.
 
-Here, 
+Bifurcation and stability of equilibrium configurations in dynamic systems without constraints has led to a systematic investigation of local blow-up behaviors at bifurcations points in terms of linearised (canonical) representations, allowing for easier classification and analysis of the bifurcation types~\cite{}. 
+For systems of ODEs the criterion  of bifurcation (from a fundamental solution) amounts to the study of the existence of solutions different than the fundamental one in an arbitrary neighborhood of the control parameters. Conditions of failure of the implicit function theorem~\cite{} describe the scenario under which a system of equations can realise more than one smooth solution.
+Less clear is the picture in presence of nonconvexities and nonlinear constraints associated with internal variables, where quasi-static evolutionary problems defined by optimality conditions take the form of variational inequalities defining the trajectories of a system in phase space. In these scenarios, as noted in the seminal work~\cite{hill}, the study of bifurcation and stability is not equivalent to the existence of solutions infinitesimally near critical points in arbitrary neighborhoods of the control parameters.
+BAZANT
+
+In our context, 
 % instead of seeking existence of solutions  (which amounts to the invertibility of equilibrium system), 
 a bifurcation condition along the system's evolution parametrised by the control parameter(s) is associated to the uniqueness of a field of vectors tangent to the trajectory in phase space.
 % Namely, the critical point is degenerate in that its second derivative is not invertible.
 % (local) failure of the implicit function theorem.
 % For an evolution, 
-In this work, we aim at characterising the stability (or observability) of static solutions (at a given control parameter) as well as to describe the evolutionary paths stemming from an initial condition, in a one-dimensional system that shows pattern formation and complex branch transitions. In our context, conditions for uniqueness of the evolution path (or its non-bifurcation) reduce to the uniqueness of solutions to a boundary value problem defined for the \emph{rates of evolution}, or equivalently, the positive definiteness of its bilinear operator IN A VECTOR SPACE.
+Brittle thin film system show pattern formation and complex branch transitions. In this work, we aim at characterising the stability (or observability) of static solutions (at a given control parameter) as well as to describe the evolutionary paths stemming from an initial condition. Conditions for uniqueness of the evolution path (or its non-bifurcation) reduce to the uniqueness of solutions to a boundary value problem defined for the \emph{rates of evolution}, or equivalently, the positive definiteness of its bilinear operator in a vector space.
 % bifurcation points are the critical loadings at which there is a multiplicity of solutions to the rate problem 
 % ----------
 
-STABILITY IS A DIFFERENT BUSINESS
-
-The loss of stability of energy-minimizing states which are stationary points of a corresponding energy functional is of paramount importance in materials science and engineering. Illustrative in this sense are Euler buckling~\cite{Bettiol2020-ey}, wrinkling in thin films~\cite{Hutchinson2013-jk}, homogeneous nucleation of dislocations in a crystal~\cite{Carpio2005-bv,Plans2007-cx,Baggio2019-rs,Mayer2022-km,Baggio2023-qu}, buckling of lattice structures~\cite{Combescure2016-dy,Bertoldi2008-au}, nucleation of cracks in soft solids or in pantographic structures \cite{Riccobelli2023-fc,Salman2021-mn}, plastic  avalanches in crystals or amorphous materials \cite{Zhang2020-ax,Weiss2021-db,Yang2020-zm}.
+The issue of stability is of a different kind when constraints play a role.
+The loss of such a property for a stationary points of an energy functional is of paramount importance in materials science and engineering. Illustrative in this sense are Euler buckling~\cite{Bettiol2020-ey}, wrinkling in thin films~\cite{Hutchinson2013-jk}, homogeneous nucleation of dislocations in a crystal~\cite{Carpio2005-bv,Plans2007-cx,Baggio2019-rs,Mayer2022-km,Baggio2023-qu}, buckling of lattice structures~\cite{Combescure2016-dy,Bertoldi2008-au}, nucleation of cracks in soft solids or in pantographic structures \cite{Riccobelli2023-fc,Salman2021-mn}, plastic  avalanches in crystals or amorphous materials \cite{Zhang2020-ax,Weiss2021-db,Yang2020-zm}.
 
 The absence of analytical solutions in strongly non-linear settings requires resorting to numerical methods for computing and predicting equilibrium configurations that correspond to the minima of an energy functional. The minimization process involves discretizing the continuum fields onto a computational grid using methods such as finite elements, finite differences, or spectral techniques. Afterwards, an iterative solver is employed to seek minimum energy states, with options including the Newton-Raphson method~\cite{Wick2017-bo}, fixed-point iteration~\cite{Chen2019-mn,Kirkesaether_Brun2020-wa,Storvik2021-cd}, line-search-based descent algorithms like steepest descent or conjugate gradient~\cite{Stiefel1952-fw,Dai1999-hz}, quasi-Newton methods such as the highly-efficient Limited-memory Broyden-Fletcher-Goldfarb-Shanno (\textsc{L-BFGS}) approach~\cite{Liu1989-kl} which involves approximating the Hessian matrix, or more recent advancements like the fast inertial relaxation engine (\textsc{FIRE})~\cite{Guenole2020-tc}. These solvers iteratively refine solutions starting from an initial guess provided as part of the solution procedure. Despite their widespread application, there remains a lack of clear understanding regarding the performance of these algorithms and their effectiveness in locating local minima. 
 
+% This work. 
+% Notably, in the phase-field theory of fracture, the initiation of a crack is preceded by a localization of the damage field, .
 
-This work centers on the numerical computation of evolutionary solutions for phase-field fracture models. Notably, in the phase-field theory of fracture, the initiation of a crack is preceded by a localization of the damage field, indicative of the loss of stability of the unfractured solution~\cite{Baldelli2014-ho,Kuhn2015-rt,Baldelli2021-gc,Harandi2023-cd}. Within this study, we will consider two one-dimensional phase-field fracture models for a brittle thin film on two types of substrates, one stiff one compliant. As it will be seen, the finite stiffness of the substrate in the second scenario leads to nontrivial qualitative differences in terms of uniqueness of the evolution path.
-The first model describes a brittle thin film deposited on a stiff (rigid) substrate, while the second model involves a compliant yet unbreakable substrate that can undergo non-uniform deformations. The fracture phenomenon of thin films bonded to substrates unveils a myriad of complex crack patterns, as evidenced by numerical studies \cite{Baldelli2014-ho,Alessi2019-bx,Hu2020-nt,Salman2021-mn,Baldelli2021-gc}, resembling those observed in natural contexts such as sand or dried mud \cite{Goehring2010-xz}, and even in biological structures like animal skin \cite{Qin2014-wz}. These observations hold particular relevance in the domain of stretchable and flexible electronics \cite{Faurie2019-to,Godard2022-ss} including  self-healing metal thin films on a flexible substrates \cite{Trost2024-ca}.  Despite the one-dimensional setting we adopt here, which allows for analytical predictions, these models reveal a complex landscape of equilibrium states with multiple local minima, POSTPONING the need for two-dimensional analysis\comment[id=ALB]{Unclear}. Moreover, in the absence of AN irreversibility constraint, bifurcation points from homogeneous solution can EASILY be calculated analytically and NUMERICALLY, by employing continuation techniques, all solutions connected to the homogeneous branch and their stability can be identified. 
-In this simple setting, we can then monitor the solutions returned from  the different  numerical optimization techniques. Our findings indicate that under quasi-static conditions, line-search-based descent algorithms not relying on full Hessian can fail to detect expected branch-switching events and may return solutions that persist on \added[id=ALB]{unstable} branches, thus lacking physical relevance. 
+The fracture phenomenon of thin films bonded to substrates unveils a myriad of complex crack patterns, as evidenced by numerical studies \cite{Baldelli2014-ho,Alessi2019-bx,Hu2020-nt,Salman2021-mn,Baldelli2021-gc}, resembling those observed in natural contexts such as sand or dried mud \cite{Goehring2010-xz}, and even in biological structures like animal skin \cite{Qin2014-wz}. These observations hold particular relevance in the domain of stretchable and flexible electronics \cite{Faurie2019-to,Godard2022-ss} including  self-healing metal thin films on a flexible substrates \cite{Trost2024-ca}. 
+Within this study, centered on the numerical computation of evolutionary solutions for phase-field fracture models, we consider two one-dimensional phase-field fracture models of a brittle membrane on two types of substrates: one stiff one compliant. The finite stiffness of the substrate in the second scenario leads to nontrivial qualitative differences in terms of uniqueness of the evolution path, associated to the loss of stability of the unfractured solution~\cite{Baldelli2014-ho,Kuhn2015-rt,Baldelli2021-gc,Harandi2023-cd}.
+The first model describes a brittle thin film deposited on a stiff (rigid) substrate, while the second model involves a compliant yet unbreakable substrate that can undergo non-uniform deformations. 
+
+Despite the one-dimensional setting we adopt here which allows for analytical predictions, these models reveal a complex landscape of equilibrium states with multiple local minima.
+% , POSTPONING the need for two-dimensional analysis\comment[id=ALB]{Unclear}. 
+In the absence of an irreversibility constraint, bifurcation points from homogeneous solution can easily be calculated analytically and numerically, by employing continuation techniques, all solutions connected to the homogeneous branch and their stability can be identified. 
+In this simple setting, we can then monitor the solutions returned from  the different  numerical optimization techniques. Our findings indicate that under quasi-static conditions, line-search-based descent algorithms not relying on full Hessian can fail to detect expected branch-switching events and may return solutions that persist on unstable branches, thus lacking physical relevance. 
 We propose a remedy to this situation which involves utilizing information from the Hessian of the functional when it becomes singular. 
-\added[id=ALB]{OPEN SYSTEMS, BIOLOGICAL APPLICATION, HEALING, REVERSIBLE DAMAGE} 
-To highlight the role of the constraint of irreversibility, we discuss this scenario case separately DISTINGUISHING two settings, namely i) that in which damage is reversible and all small perturbations are admissible, and ii) the case where damage is subject to an irreversibility constraint, which results in a perturbation space which is TOPOLOGICALLY DIFFERENT from the first case. The former scenario corresponds to the case in which negative variations of damage are allowed and indeed may occur - if convenient from an energetic viewpoint. The second setting, instead, considers damage as an irreversible process by enforcing an irreducible one-directional pointwise growth constraint.
+% \added[id=ALB]{OPEN SYSTEMS, BIOLOGICAL APPLICATION, HEALING, REVERSIBLE DAMAGE} 
+To discuss this scenario we distinguish two settings, namely i) that in which damage is reversible and all small perturbations are admissible, and ii) the case where damage is subject to an irreversibility constraint which forbids healing. In the former scenario  negative variations of damage are allowed and indeed may occur - if convenient from an energetic viewpoint. In the second setting, instead, we consider damage as a unilateral irreversible process stemming from an irreducible one-directional pointwise growth constraint.
 
 The rest of the paper is organized as follows. In Sections \ref{sec:rigid} and \ref{sec:non-rigid}, we present one-dimensional phase-field fracture models with both rigid and non-rigid elastic foundations, focusing on the analysis  of linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we investigate the nonlinear regime and discuss the selection of equilibrium branches using various numerical optimization algorithms. In the final Section  summarize our results.
 
-\paragraph{Notation.} \added[id=ALB]{Standard notation for Sobolev spaces, derivtives, indices, ..., subscripted $t$ means $t$-parametrised quantities, superscripted $k$ means $k$-th iterate of an iterative algorithm. States $y_t, X, X^*$, vectors, matrices, ..., Sobolevs spaces of scalar functions on unit interval $H^1(0, 1)$}
-PRIME SIGN, SPATIAL DERIVATIVE WHEN APPLIED TO FIEELDS OR QUANTITY RELATED TO THE SUBSTRATE WHEN APPENDED TO MATERIAL CONSTANTS,
-AMERICAN  OR BRITISH ENGLISH?
+\paragraph{Notation.} We employ standard notation for scalar Sobolev spaces defined on the unit interval, such as $H^1(0, 1)$, derivtives of one-dimensional fields, and matrix indices. Subscripted $t$ means $t$-parametrised quantities, superscripted $(k)$ means $k$-th iterate of an iterative algorithm. 
+FINITE ELEMENT MATRICES AND VECTORS 
+We use the prime sign to indicates spatial derivatives. Throughout the investigation we consider a 2-layer structure. Quantities related to the substrate (fields, material parameters, energies) are denoted with a tilde.
+We use American English spelling throughout the text.
