--- a/paper/mybibliography.bib
+++ b/paper/mybibliography.bib
@@ -1,12 +1,241 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Andrés  at 2024-05-30 14:59:50 +0200 
+%% Created for Oguz Umut Salman at 2024-08-28 15:27:51 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Iooss2012-el,
+	address = {New York, NY},
+	author = {Iooss, Gerard and Joseph, Daniel D},
+	date-added = {2024-08-28 15:27:49 +0200},
+	date-modified = {2024-08-28 15:27:49 +0200},
+	edition = 2,
+	language = {en},
+	month = dec,
+	publisher = {Springer},
+	series = {Undergraduate Texts in Mathematics},
+	title = {Elementary stability and bifurcation theory},
+	year = 2012}
+
+@article{Hill1958-xd,
+	abstract = {A sufficient condition is established for uniqueness of the
+               boundary-value problem set by given velocities on a part of the
+               surface of a body and given nominal traction-rates on the
+               remainder. No restriction is placed on changes in geometry either
+               in the boundary-value problem itself or in the postulated
+               material properties, which are a generalization of those
+               conventionally assumed for workhardening elastic-plastic solids.
+               The solution, when it is unique, is characterized by an extremum
+               principle.Stability under dead loading is also examined, and a
+               criterion is proposed. This has a formal resemblance to the
+               uniqueness criterion, but differs from it in a significant
+               respect when the body is partly plastic, so that stability and
+               uniqueness need not be parallel properties.Finally, the present,
+               theorems are compared with those previously proved for
+               rigid-plastic solids (Hill 1957a, b. d).},
+	author = {Hill, R},
+	date-added = {2024-08-28 15:27:11 +0200},
+	date-modified = {2024-08-28 15:27:11 +0200},
+	journal = {J. Mech. Phys. Solids},
+	language = {en},
+	month = may,
+	number = 3,
+	pages = {236--249},
+	publisher = {Elsevier BV},
+	title = {A general theory of uniqueness and stability in elastic-plastic solids},
+	volume = 6,
+	year = 1958}
+
+@article{Moreau1962-fz,
+	author = {Moreau, J J},
+	date-added = {2024-08-28 15:25:29 +0200},
+	date-modified = {2024-08-28 15:25:29 +0200},
+	journal = {Comptes rendus hebdomadaires des s{\'e}ances de l'Acad{\'e}mie des sciences},
+	pages = {238--240},
+	title = {D{\'e}composition orthogonale d'un espace hilbertien selon deux c{\^o}nes mutuellement polaires},
+	volume = 255,
+	year = 1962}
+
+@article{Pinto_da_Costa2010-qv,
+	author = {Pinto da Costa, A and Seeger, A},
+	date-added = {2024-08-28 13:08:04 +0200},
+	date-modified = {2024-08-28 13:08:04 +0200},
+	journal = {Comput. Optim. Appl.},
+	language = {en},
+	month = jan,
+	number = 1,
+	pages = {25--57},
+	publisher = {Springer Science and Business Media LLC},
+	title = {Cone-constrained eigenvalue problems: theory and algorithms},
+	volume = 45,
+	year = 2010}
+
+@article{Baggio2023-yo,
+	author = {Baggio, R and Salman, O U and Truskinovsky, L},
+	date-added = {2024-08-28 12:37:59 +0200},
+	date-modified = {2024-08-28 12:37:59 +0200},
+	journal = {Eur. J. Mech. A: Solids},
+	language = {en},
+	month = may,
+	number = 104897,
+	pages = 104897,
+	publisher = {Elsevier BV},
+	title = {Homogeneous nucleation of dislocations as a pattern formation phenomenon},
+	volume = 99,
+	year = 2023}
+
+@article{Truskinovsky2010-st,
+	author = {Truskinovsky, L},
+	date-added = {2024-08-28 12:37:14 +0200},
+	date-modified = {2024-08-28 12:37:14 +0200},
+	journal = {Received August},
+	title = {Fracture as a phase transition, in ``Contemporary Research in the Mechanics and Mathematics of Materials,'' {CIMNE}, Barcelona,(1996), 322--332},
+	year = 2010}
+
+@article{Bourdin2000-pc,
+	abstract = {The numerical implementation of the model of brittle fracture
+               developed in Francfort and Marigo (1998. J. Mech. Phys. Solids 46
+               (8), 1319--1342) is presented. Various computational methods based
+               on variational approximations of the original functional are
+               proposed. They are tested on several antiplanar and planar
+               examples that are beyond the reach of the classical computational
+               tools of fracture mechanics.},
+	author = {Bourdin, B and Francfort, G A and Marigo, J-J},
+	date-added = {2024-08-28 11:05:32 +0200},
+	date-modified = {2024-08-28 11:05:42 +0200},
+	journal = {J. Mech. Phys. Solids},
+	language = {en},
+	month = apr,
+	number = 4,
+	pages = {797--826},
+	publisher = {Elsevier BV},
+	title = {Numerical experiments in revisited brittle fracture},
+	volume = 48,
+	year = 2000}
+
+@incollection{De-Lorenzis2020-rz,
+	address = {Cham},
+	author = {De Lorenzis, Laura and Gerasimov, Tymofiy},
+	booktitle = {Modeling in Engineering Using Innovative Numerical Methods for Solids and Fluids},
+	date-added = {2024-08-28 11:01:41 +0200},
+	date-modified = {2024-08-28 11:01:41 +0200},
+	pages = {75--101},
+	publisher = {Springer International Publishing},
+	title = {Numerical implementation of phase-field models of brittle fracture},
+	year = 2020}
+
+@article{Bazant2010-zb,
+	abstract = {Buckling of elastic columns by equilibrium analysis Buckling of
+               elastic frames by equilibrium analysis Dynamic analysis and
+               general concept of stability Energy analysis of discrete or
+               discretized elastic systems Energy analysis of continuous elastic
+               structures and approximate methods Thin-wall elastic beams
+               Elastic plates and shells Elastoplastic buckling Creep buckling
+               Stability of inelastic structures and path bifurcation Stability
+               of massive three-dimensional bodies Fracture as a stability
+               problem Damage as a stability problem.},
+	author = {Ba{\v z}ant, Z and Cedolin, L},
+	date-added = {2024-08-28 10:31:32 +0200},
+	date-modified = {2024-08-28 10:31:32 +0200},
+	journal = {Journal of Structural Engineering-asce},
+	month = aug,
+	pages = {1001--1002},
+	publisher = {books.google.com},
+	title = {Stability of structures: Elastic, inelastic, Fracture and Damage theories},
+	volume = 119,
+	year = 2010}
+
+@article{Lookman2003-gd,
+	abstract = {We derive underdamped evolution equations for the order-parameter
+               (OP) strains of a proper ferroelastic material undergoing a
+               structural transition, using Lagrangian variations with Rayleigh
+               dissipation, and a free energy as a polynomial expansion in the
+               N=n+N},
+	author = {Lookman, T and Shenoy, S R and Rasmussen, K {\O} and Saxena, A and Bishop, A R},
+	date-added = {2024-08-28 10:21:58 +0200},
+	date-modified = {2024-08-28 10:21:58 +0200},
+	journal = {Phys. Rev. B: Condens. Matter Mater. Phys.},
+	keywords = {Solid-solid transitions, Order-disorder transformations, statistical mechanics of model systems, Nonlinear or nonlocal theories and models, Martensitic transformations},
+	month = jan,
+	number = 2,
+	pages = 024114,
+	publisher = {American Physical Society},
+	title = {Ferroelastic dynamics and strain compatibility},
+	volume = 67,
+	year = 2003}
+
+@article{Pattamatta2014-pn,
+	abstract = {Nanostructures are technological devices constructed on a
+              nanometer length scale more than a thousand times thinner than a
+              human hair. Due to the unique properties of matter at this scale,
+              such devices offer great potential for creating novel materials
+              and behaviors that can be leveraged to benefit mankind. This
+              paper addresses a particular challenge involved in the design of
+              nanostructures--their stochastic or apparently random response to
+              external loading. This is because fundamentally the function that
+              relates the energy of a nanostructure to the arrangement of its
+              atoms is extremely nonconvex, with each minimum corresponding to
+              a possible equilibrium state that may be visited as the system
+              responds to loading. Traditional atomistic simulation techniques
+              are not capable of systematically addressing this complexity.
+              Instead, we construct an equilibrium map (EM) for the
+              nanostructure, analogous to a phase diagram for bulk materials,
+              which fully characterizes its response. Using the EM, definitive
+              predictions can be made in limiting cases and the spectrum of
+              responses at any desired loading rate can be obtained. The latter
+              is important because standard atomistic methods are fundamentally
+              limited, by computational feasibility, to simulations of loading
+              rates that are many orders of magnitude faster than reality. In
+              contrast, the EM-based approach makes possible the direct
+              simulation of nanostructure experiments. We demonstrate the
+              method's capabilities and its surprisingly complex results for
+              the case of a nanoslab of nickel under compression.},
+	author = {Pattamatta, Subrahmanyam and Elliott, Ryan S and Tadmor, Ellad B},
+	date-added = {2024-08-27 14:28:43 +0200},
+	date-modified = {2024-08-27 14:28:43 +0200},
+	journal = {Proc. Natl. Acad. Sci. U. S. A.},
+	keywords = {bifurcation; continuation; lattice statics; nonconvexity; stability},
+	language = {en},
+	month = apr,
+	number = 17,
+	pages = {E1678--86},
+	title = {Mapping the stochastic response of nanostructures},
+	volume = 111,
+	year = 2014}
+
+@article{Leon_Baldelli2015-rp,
+	abstract = {We show how bilateral, linear, elastic foundations (i.e., Winkler
+              foundations) often regarded as heuristic, phenomenological
+              models, emerge asymptotically from standard, linear,
+              three-dimensional elasticity. We study the parametric asymptotics
+              of a non-homogeneous linearly elastic bi-layer attached to a
+              rigid substrate as its thickness vanishes, for varying thickness
+              and stiffness ratios. By using rigorous arguments based on energy
+              estimates, we provide a first rational and constructive
+              justification of reduced foundation models. We establish the
+              variational weak convergence of the three-dimensional elasticity
+              problem to a two-dimensional one, of either a ``membrane over
+              in-plane elastic foundation'', or a ``plate over transverse
+              elastic foundation''. These two regimes are function of the only
+              two parameters of the system, and a phase diagram synthesizes
+              their domains of validity. Moreover, we derive explicit
+              formul{\ae} relating the effective coefficients of the elastic
+              foundation to the elastic and geometric parameters of the
+              original three-dimensional system.},
+	author = {Le{\'o}n Baldelli, Andr{\'e}s A and Bourdin, Blaise},
+	date-added = {2024-08-27 14:13:31 +0200},
+	date-modified = {2024-08-27 14:13:31 +0200},
+	journal = {J. Elast.},
+	month = dec,
+	number = 2,
+	pages = {275--301},
+	title = {On the Asymptotic Derivation of {Winkler-Type} Energies from {3D} Elasticity},
+	volume = 121,
+	year = 2015}
 
 @misc{Ogden1997-rf,
 	author = {Ogden, R W},
@@ -216,12 +445,6 @@
 	journal = {Available from: www alglib net},
 	title = {Alglib},
 	year = 2013}
-
-@article{Bourdin2000-pc,
-	author = {Bourdin, B and Francfort, G A and Marigo, J J},
-	journal = {J. Mech. Phys. Solids},
-	title = {Numerical experiments in revisited brittle fracture},
-	year = 2000}
 
 @article{bourdin2007,
 	author = {B. Bourdin},
@@ -1126,7 +1349,8 @@
 	year = 2011}
 
 @article{Salman2019-cg,
-	author = {Salman, Og̃uz Umut and Muite, Benson and Finel, Alphonse},
+	author = {Salman, Oguz Umut and Muite, Benson and Finel, Alphonse},
+	date-modified = {2024-08-28 10:22:37 +0200},
 	journal = {Eur. Phys. J. B},
 	month = jan,
 	number = 1,
